TEST_PROGRAMS/VALID/05/2d_slice_type_dec.go
/* 2D slice type declaration. */

package main

type matrix [][] float64

func main() {
	// Do nothing.
}
