TEST_PROGRAMS/INVALID/05/distributive_type_with_one_type_on_single_line.go
/* "Distributive" type declaration with one type on a single line. */

package main

type ( t1 bool ) // Error: Closing bracket must be on its own line.


func main() {
	// Do nothing
}
